--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <a href="#">Diseño web</a>
         <a href="#">Donde estamos</a>
         <a href="#">Contacto</a>
+        <a href="mediaqueres.html">PAGINA RESPONDSILE</a>
     </nav>
     <header>
         <div id="titular">
